# ChangeLog for sys-apps/etckeeper
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/etckeeper/ChangeLog,v 1.38 2014/03/06 20:30:07 mrueg Exp $

*etckeeper-1.11-r1 (06 Mar 2014)

  06 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +etckeeper-1.11-r1.ebuild,
  +files/etckeeper-1.11-gentoo.patch:
  Fix incorrect gitignore value. Patch by Taahir Ahmed. Fixes bug #503268.

  24 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -etckeeper-1.4.ebuild,
  -etckeeper-1.7.ebuild, -etckeeper-1.9.ebuild,
  -files/etckeeper-1.4-gentoo.patch:
  Cleanup old.

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> etckeeper-1.10.ebuild:
  Stable for x86, wrt bug #488404

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> etckeeper-1.10.ebuild:
  amd64 stable, bug #488404

*etckeeper-1.11 (19 Dec 2013)

  19 Dec 2013; Julian Ospald <hasufell@gentoo.org> +etckeeper-1.11.ebuild:
  version bump

*etckeeper-1.10 (04 Nov 2013)

  04 Nov 2013; Julian Ospald <hasufell@gentoo.org> +etckeeper-1.10.ebuild:
  version bump

  29 Oct 2013; Tony Vroon <chainsaw@gentoo.org> etckeeper-1.9.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani in bug #488404.

*etckeeper-1.9 (07 Sep 2013)

  07 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +etckeeper-1.9.ebuild:
  Version bump.

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> etckeeper-1.7.ebuild:
  Stable for x86, wrt bug #481400

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> etckeeper-1.7.ebuild:
  Stable for amd64, wrt bug #481400

  31 Jul 2013; Julian Ospald <hasufell@gentoo.org> etckeeper-1.7.ebuild:
  fix patch source

*etckeeper-1.7 (31 Jul 2013)

  31 Jul 2013; Julian Ospald <hasufell@gentoo.org>
  -files/etckeeper-1.5-gentoo.patch, -etckeeper-1.6.ebuild,
  +etckeeper-1.7.ebuild, +files/etckeeper-1.7-gentoo.patch:
  version bump

*etckeeper-1.6 (29 Jul 2013)

  29 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +etckeeper-1.6.ebuild,
  -etckeeper-1.5.ebuild: