@@ -6,6 +6,5 @@ DIST etckeeper-1.10.tar.gz 48041 SHA256 8de13e53c858b696df5fa1c330a98c29c582bfed
 DIST etckeeper-1.11.tar.gz 48100 SHA256 a58b84af8307623f8c59acd6b161bf781909a1dac4b82853baa3098d47decabc SHA512 f9ae79dfee4d97195b0a40ef319d75242662b9717d0293ac9722a7728e22374b6425391e91076ab5e0e4524a16c211511a2857b867d3610ff5c6b2bc561c96a7 WHIRLPOOL 174b857dce5d4ecdb26a01e030c312f57aeb9d1db3eaede5ead4c7e3a08ce05695ca528d226ce1847d28eb14a7360990bb21bb777a710f3b56ab5594ffd01301
 EBUILD etckeeper-1.10.ebuild 1891 SHA256 d4baeb9a93bab2531d129016d174c018163d69f4830b52ba76915fcc1befe9ad SHA512 6ee3f5794b4caa941e68fe02a633d9f7e8ac0aa1871c42ab9be82495857824e3c92794de485e7905c8551fd9b61f13325ed2ed0af20775025f0a8aa2380cf0b0 WHIRLPOOL 889d07f92976107fbc4065bc5e4824d53920e2a3ae8a6a85ac7b3c0348a6314aec4c2f2d51cef24cfce931ba83a537142a420937f1e8b17d7261da722c3fee95
 EBUILD etckeeper-1.11-r1.ebuild 1893 SHA256 8809555f6bf03e8c985ca740e3afd74e688031ac260361259d661de7a3938b18 SHA512 3d815576adb1687d33b08c2d19411f0ec5f7b7301eee7f0599ed6a07dd5de4eac29078641829452df7b8c7dd5b7196a28448c70cde25f54078e2acf1fb36f97c WHIRLPOOL 2e71ac258d87a4e65aa3d0beb514d89a7f56ec5ae832e7d1d6381dada0c0d184bce99e7a74603746ceb318f97415aec4bcf2e4d1fa68f4093cff9a18f5371767
-EBUILD etckeeper-1.11.ebuild 1898 SHA256 3de7cdb447e9d2490f241f1b998d83b6b30f99a29eefa6e8bffdc696e1ea4e1b SHA512 5356b7d7f5d02f81d6ab89ac7616c513f5aa209f368c7360f8de1305364e635fc927cb879714417b9c8bf4454bdf9955ccec4a2820b1186db77c09145c50d5b6 WHIRLPOOL 5e85f231e119400ceb453949b1391d1912700845b7bd615beefd6fed0bb4eef436316037227269f15ea566004dc78e71e4788255e2ff9a8eca48ab616a3dab17
-MISC ChangeLog 5179 SHA256 7250857d7dcf8deecdced0f2e92027083b35e1675cf3db6cca63dc771facb755 SHA512 edcc7ae274bd7e31e7fffd7e565811004a6a4f7c15e9d977a9579f3ab0302e8bc4fe2f31f2813bdbea86f23cb2434253eea64afde7fe866fa192162da9cd4cfc WHIRLPOOL eaed332ab99179fbd1c5c4556a2102479767a75208a27dbb2c970f26e2262910e5dd3ea212d6d8b9d2beeeb4a9828f5712d8d9a6bdb1661baea5e1de1ee34771
+MISC ChangeLog 5267 SHA256 b82a74397cae5a415f074e05cca5edf2524d0559d32cd8cabf7afc4b0252e432 SHA512 25c39e8077bd9b9e71ca502da9636a4ce143a3446d966984f5838df30a5826aa70cd3151ac2f745eaf7895c41060cfb5dda3c9495a67e4a15a2216c060b6fe82 WHIRLPOOL 70d3d0e2f0840e51482f91b4f7328ee7c8488f04a2d108bbbc98406fb4393e8469c5190b1674240c9ef0743362d1ec8fe79c17d041525bfd0e17ce2960e4635e
 MISC metadata.xml 976 SHA256 48bd7af76b5aad30f38c79884de21e36ce849f84c138152087595dbd8832ff06 SHA512 ffb60b75d294ca6d92002db677c97fc58022039b4b1f4446f30b0ae0c4a3998aa2c731010f4d745bb7b2205ed2dcb640820029f8178cda1bd34909c36f5385e7 WHIRLPOOL 8979b25b455077f7342da36fbcf719cc4276441f687afe94a87dca9ab69d4d6b60c960ef705a7109ef43fad98b7210753359d89c596a9d46910be9c009390ff9
