@@ -1,75 +1,0 @@
-# Copyright 1999-2013 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/etckeeper/etckeeper-1.11.ebuild,v 1.1 2013/12/19 15:36:56 hasufell Exp $
-
-EAPI=5
-
-PYTHON_COMPAT=( python2_6 python2_7 )
-
-inherit eutils bash-completion-r1 prefix python-r1
-
-DESCRIPTION="A collection of tools to let /etc be stored in a repository"
-HOMEPAGE="http://kitenet.net/~joey/code/etckeeper/"
-SRC_URI="https://github.com/joeyh/etckeeper/archive/${PV}.tar.gz -> ${P}.tar.gz"
-
-LICENSE="GPL-2"
-KEYWORDS="~amd64 ~x86"
-SLOT="0"
-IUSE="bazaar cron"
-REQUIRED_USE="bazaar? ( ${PYTHON_REQUIRED_USE} )"
-
-VCS_DEPEND="dev-vcs/git
-	dev-vcs/mercurial
-	dev-vcs/darcs"
-DEPEND="bazaar? ( dev-vcs/bzr )"
-RDEPEND="${DEPEND}
-	app-portage/portage-utils
-	cron? ( virtual/cron )
-	bazaar? ( ${PYTHON_DEPS} )
-	!bazaar? ( || ( ${VCS_DEPEND} ) )"
-
-src_prepare(){
-	epatch "${FILESDIR}"/${PN}-1.7-gentoo.patch
-}
-
-src_compile() {
-	:
-}
-
-src_install(){
-	emake DESTDIR="${ED}" install
-
-	bzr_install() {
-		${PYTHON} ./${PN}-bzr/__init__.py install --root="${ED}" ||
-			die "bzr support installation failed!"
-	}
-	use bazaar && python_foreach_impl bzr_install
-
-	if use prefix; then
-		doenvd "${FILESDIR}"/99${PN}
-		eprefixify "${ED%/}"/etc/env.d/99${PN}
-	fi
-
-	newbashcomp bash_completion ${PN}
-	dodoc README TODO
-	docinto examples
-	dodoc "${FILESDIR}"/bashrc
-
-	if use cron ; then
-		exeinto /etc/cron.daily
-		newexe debian/cron.daily etckeeper
-	fi
-}
-
-pkg_postinst(){
-	elog "${PN} supports the following VCS: ${VCS_DEPEND}"
-	elog "	dev-vcs/bzr"
-	elog "This ebuild just ensures at least one is installed!"
-	elog "For dev-vcs/bzr you need to enable 'bazaar' useflag."
-	elog
-	elog "You may want to adjust your /etc/portage/bashrc"
-	elog "see the example file in /usr/share/doc/${P}/examples"
-	elog
-	elog "To initialise your etc-dir as a repository run:"
-	elog "${PN} init -d /etc"
-}
